--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@googleapis/youtube": "^13.0.0",
     "aws-amplify": "^6.0.6",
+    "google-auth-library": "^9.4.1",
+    "googleapis": "^129.0.0",
     "next": "14.0.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-infinite-scroll-component": "^6.1.0"
   },
   "devDependencies": {
     "@aws-amplify/backend": "^0.6.0",
