--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-amplify/adapter-nextjs": "^1.0.7",
     "@googleapis/youtube": "^13.0.0",
-    "aws-amplify": "^6.0.6",
+    "aws-amplify": "^6.0.7",
     "google-auth-library": "^9.4.1",
     "googleapis": "^129.0.0",
     "next": "14.0.3",
